--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "SPIROLINK",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
