--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
   "author": "SPIROLINK",
   "license": "MIT",
   "dependencies": {
-    "@sendgrid/mail": "^8.1.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemailer": "^7.0.12",
-    "openai": "^4.20.0",
-    "resend": "^6.6.0"
+    "openai": "^4.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
